syntax = "proto3";

package calculator;

option java_package = "com.mit.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 firstNum = 1;
  int32 secondNum = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message PrimeNumberRequest {
  int32 number = 1;
}

message PrimeNumberResponse {
  int32 primeNumber = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse);

  rpc primeNumberDecomposition(PrimeNumberRequest) returns(stream PrimeNumberResponse);
}
